# 2_Course_Translator_cpp

./: CMakeLists.txt  Lexer.h  Parser.h  README.md  exceptions.cpp  lexer.h  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
Tests/: CMakeLists.txt  lexerTest.cpp  main.cpp  tokenTest.cpp
src/: Ast.hpp  CMakeLists.txt  Lexer.h  Node.hpp  Parser.h  StackTraceGenerator.hpp  Token.hpp  delphiTestFile1.dpr  exceptions.cpp  function.hpp  function_table.hpp  lexer.h  main.cpp  semantic_analyser.hpp  semantic_analyzer.hpp  translator.hpp  translator_new.hpp  variable.hpp  variable_table.hpp
